Redesign the RecordSelectionDialog to use tabbed interface
As per discussion in #739, the current interface for switch
between preset modes and manual mode (for presets or manual
selection option) is not intutive. Modifying the interface
to use tabbed interface.
On "Presets" tab, we only show the default presets. On any
customization of the default presets or selection of manual
selection mode, we automatically switch to the "Advanced" tab.

The working behavior is same as earlier - this is just a UX
change for achieving the earlier working behavior.

BUG: #739

R=nduca,dsinclair

--- a/trace_viewer/base/ui/common.css
+++ b/trace_viewer/base/ui/common.css
@@ -9,3 +9,26 @@ body * {
   -webkit-user-select: none;
   box-sizing: border-box;
 }
+
+.labeled-checkbox {
+  white-space: nowrap;
+}
+
+.labeled-option-group {
+  -webkit-flex: 0 0 auto;
+  -webkit-flex-direction: column;
+  -webkit-align-items: left;
+  display: -webkit-flex;
+}
+
+.labeled-option {
+  border-top: 5px solid white;
+  border-bottom: 5px solid white;
+}
+
+.labeled-option-customize {
+  float: right;
+  background: rgb(205, 205, 205);
+  border-color: blueviolet;
+  margin-left: 20px;
+}
